tilestore now uses Logger for debug messages and not Client must still be reviewed and some minor stylish changes in the other files